# hemulator

./: .gitignore  32BIT_IMPLEMENTATION_PLAN.md  AGENTS.md  AGENT_HANDOFF.md  ARCHITECTURE.md  ATARI2600_REVIEW.md  COMMIT_REVIEW.md  CONTRIBUTING.md  CPU_8086_REVIEW_2025.md  CPU_8086_THIRD_ROUND_FIXES.md  Cargo.toml  GB_REVIEW.md  GUI_COMPLETE_GUIDE.md  GUI_IMPLEMENTATION_STATUS.md  GUI_IMPROVEMENTS_SUMMARY.md  GUI_INTEGRATION_GUIDE.md  GUI_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INPUT_SYSTEM_CHANGES.md  MANUAL.md  N64_RENDERER_ARCHITECTURE.md  NES_REVIEW.md  PC_INTERRUPT_ANALYSIS.md  README.md  REFERENCE.md  RENDERER_ARCHITECTURE.md  STATUS_BAR_CHANGES.md  TESTING_STATUS_BAR.md  TODO.md  boot.cputrace  debug_run.txt  state.json  test_bios_gen.rs  test_boot_trace.rs  test_pop_loop.rs  test_trace_boot.rs
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
crates/core/: Cargo.toml
crates/core/benches/: cpu_6502.rs
crates/core/src/: cpu_6502.rs  cpu_65c816.rs  cpu_8080.rs  cpu_8086.rs  cpu_8086.rs.backup  cpu_8086_protected.rs  cpu_lr35902.rs  cpu_mips_r4300i.rs  cpu_z80.rs  lib.rs  logging.rs  renderer.rs
crates/core/src/apu/: audio_chip.rs  dmc.rs  envelope.rs  frame_counter.rs  length_counter.rs  mod.rs  noise.rs  polynomial.rs  pulse.rs  rp2a03.rs  rp2a07.rs  sn76489.rs  sweep.rs  timing.rs  triangle.rs  wave.rs
crates/core/src/cpu_8086/: tests_16bit.rs  tests_flags.rs  tests_jumps.rs  tests_misc.rs
crates/core/src/cpu_8086_tests/: tests_32bit.rs  tests_8bit.rs  tests_mod.rs
crates/core/src/graphics/: color.rs  mod.rs  zbuffer.rs
crates/core/src/ppu/: mod.rs  palette.rs  tile.rs
crates/frontend/cli/: Cargo.toml
crates/frontend/cli/examples/: headless.rs
crates/frontend/cli/src/: main.rs
crates/frontend/gui/: Cargo.toml
crates/frontend/gui/examples/: video_processing.rs
crates/frontend/gui/src/: crt_filter.rs  display_filter.rs  egui_gui.rs  egui_sdl2.rs  hemu_project.rs  input.rs  input_mapper.rs  lib.rs  main.rs  menu.rs  popup_window.rs  rom_detect.rs  save_state.rs  selector.rs  settings.rs  status_bar.rs  system_adapter.rs  ui_render.rs
crates/frontend/gui/src/egui_ui/: layout.rs  menu_bar.rs  mod.rs  property_pane.rs  status_bar.rs  tabs.rs
crates/frontend/gui/src/shaders/: fragment_commodore1702.glsl  fragment_crt.glsl  fragment_ibm5151.glsl  fragment_none.glsl  fragment_phosphor.glsl  fragment_rca_victor.glsl  fragment_scanlines.glsl  fragment_sharp_lcd.glsl  fragment_sony_trinitron.glsl
crates/frontend/gui/src/video_processor/: mod.rs  opengl.rs
crates/frontend/gui/src/window_backend/: mod.rs  sdl2_backend.rs  sdl2_egui_backend.rs
crates/frontend/gui/tests/: logging_integration.rs
crates/systems/atari2600/: Cargo.toml  README.md  SPEC_COMPLIANCE.md  TIMING_ANALYSIS.md  VERIFICATION_SUMMARY.md
crates/systems/atari2600/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  riot.rs  tia.rs  tia_renderer.rs
crates/systems/gb/: Cargo.toml  README.md
crates/systems/gb/src/: apu.rs  bus.rs  lib.rs  ppu.rs  ppu_renderer.rs  timer.rs
crates/systems/n64/: Cargo.toml  README.md
crates/systems/n64/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  mi.rs  pif.rs  rdp.rs  rdp_renderer.rs  rdp_renderer_opengl.rs  rdp_renderer_software.rs  rsp.rs  rsp_hle.rs  vi.rs
crates/systems/n64/src/shaders/: fragment_flat.glsl  fragment_gouraud.glsl  fragment_textured.glsl  vertex.glsl  vertex_textured.glsl
crates/systems/nes/: Cargo.toml  README.md
crates/systems/nes/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs  ppu_renderer.rs  ppu_renderer_opengl.rs
crates/systems/nes/src/mappers/: axrom.rs  bnrom.rs  camerica.rs  cnrom.rs  colordreams.rs  gxrom.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mod.rs  namco118.rs  nina.rs  nrom.rs  uxrom.rs
crates/systems/pc/: Cargo.toml  README.md
crates/systems/pc/src/: bios.rs  bus.rs  cpu.rs  disk.rs  dpmi.rs  font.rs  font_data_8x14.txt  font_data_8x16.txt  font_data_8x8.txt  keyboard.rs  lib.rs  mouse.rs  pit.rs  video.rs  video_adapter.rs  video_adapter_cga_graphics.rs  (+7 more)
crates/systems/sms/: Cargo.toml  README.md
crates/systems/snes/: Cargo.toml  README.md
docs/: 32BIT_IMPLEMENTATION_PLAN.md  32bit_phase1_register_extension.md  ARCHITECTURE.md  CONTRIBUTING.md  CPU_8086_ADDITIONAL_FIXES.md  CRT_FILTERS.md  GAMMA_CORRECTION_FIX.md  GB_SPRITE_INVESTIGATION.md  INT_10H_13H_REVIEW.md  MANUAL.md  MENU_SYSTEM.md  N64_STATUS.md  NEXT_EMULATOR_RECOMMENDATION.md  PHASE1_PROGRESS.md  SMS_IMPLEMENTATION_GUIDE.md  SNES_EMULATION_PITFALLS.md  SNES_FULLSNES_VERIFICATION.md  SNES_REAL_ROM_INVESTIGATION.md  UI_MOCKUP.md  architecture.md  atari2600_pitfalls.md  known_issues.md  n64_3d_rendering.md
docs/reference/: REFERENCE_6502.md  REFERENCE_65c816.md  REFERENCE_8080.md
docs/references/: cpu_6502.md  cpu_65c816.md  cpu_8080.md  cpu_8086.md  cpu_lr35902.md  cpu_mips_r4300i.md  cpu_z80.md  pc_interrupts.md
docs/state/: CPU_ANALYSIS.md  CPU_REVIEW_RESULTS.md
test_roms/: README.md
test_roms/atari2600/: build.sh  checkerboard.asm  game_test.asm  position_test.asm  simple_position_test.asm  test.asm  test_timer.asm  vcs.h
test_roms/gb/: build.sh  test.asm  test.gb
test_roms/gbc/: build.sh  test.asm  test.gb  test.gbc
test_roms/n64/: build.sh  enhanced_test.py  pong3d_test.py  test.asm  test.z64  test_enhanced.z64
test_roms/nes/: build.sh  minimal.nes  minimal.s  nes.cfg  test.nes  test.s  test_simple.nes  test_simple.s
test_roms/pc/: README.md  bios.asm  build.sh  build_boot.sh  build_menu.sh  example.hemu  fileio_test.asm  menu.asm  menu_floppy.img
test_roms/pc/basic_boot/: boot.asm  build.sh  test_floppy.img
test_roms/pc/comprehensive_boot/: build.sh  comprehensive_boot.asm  comprehensive_boot.img
test_roms/pc/fileio/: build.sh  fileio_test.asm
test_roms/pc/menu/: build.sh  menu.asm  menu_floppy.img
test_roms/snes/: README.md  build.sh  snes.cfg  test.s  test.sfc  test_enhanced.s  test_enhanced.sfc  test_priority.s  test_priority.sfc  test_sprite_overflow.s  test_sprite_overflow.sfc
workbench/: README.md  build.ps1  source.asm  workbench.hemu
workbench/images/: x86boot.img
(+30 files in other folders)
