[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/systems/nes",
  "crates/systems/gb",
  "crates/systems/atari2600",
  "crates/systems/pc",
  "crates/systems/snes",
  "crates/systems/n64",
  "crates/frontend/gui",
]

# Performance optimizations for release builds
[profile.release]
# Maximum optimization level for best runtime performance
opt-level = 3
# Enable Link Time Optimization for cross-crate inlining and optimization
# This significantly improves performance of hot paths across crate boundaries
lto = "fat"
# Single codegen unit for maximum optimization (slower compile, faster runtime)
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true
# Panic behavior: abort instead of unwind for smaller binary and faster panics
panic = "abort"

# Improved debug performance - debug builds run at ~30fps without this
[profile.dev]
# Use optimization level 1 for dev builds to improve performance
# This makes debug builds usable (~60fps) while keeping compile times fast
opt-level = 1

# Fast iteration profile - balances compile time and runtime performance
# Use with: cargo build --profile release-quick
[profile.release-quick]
# Inherits from release profile
inherits = "release"
# Optimization level 2 provides good runtime performance with faster compile times
opt-level = 2
# Disable LTO for much faster compilation (biggest compile-time win)
lto = false
# More codegen units for parallel compilation (faster builds)
codegen-units = 16
# Keep stripping symbols for smaller binary
strip = true
# Keep abort for consistency with release
panic = "abort"
