[package]
name = "emu_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
emu_core = { path = "../../core" }
emu_nes = { path = "../../systems/nes" }
emu_gb = { path = "../../systems/gb" }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
