[package]
name = "emu_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hemu"
path = "src/main.rs"

[dependencies]
emu_core = { path = "../../core" }
emu_nes = { path = "../../systems/nes" }
emu_gb = { path = "../../systems/gb" }
emu_atari2600 = { path = "../../systems/atari2600" }
minifb = "0.28"
rodio = "0.17"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
rfd = "0.14"
