[package]
name = "emu_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hemu"
path = "src/main.rs"

[dependencies]
emu_core = { path = "../../core" }
emu_nes = { path = "../../systems/nes" }
emu_gb = { path = "../../systems/gb" }
emu_atari2600 = { path = "../../systems/atari2600" }
emu_pc = { path = "../../systems/pc" }
emu_snes = { path = "../../systems/snes" }
emu_n64 = { path = "../../systems/n64" }
minifb = "0.28"
rodio = "0.17"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
rfd = "0.14"
png = "0.17"
rand = "0.8"
chrono = "0.4"

# OpenGL support (optional)
glow = { version = "0.13", optional = true }
glutin = { version = "0.31", optional = true }
glutin-winit = { version = "0.4", optional = true }
raw-window-handle = { version = "0.5", optional = true }
bytemuck = { version = "1.14", optional = true }

[features]
default = ["software-renderer"]
software-renderer = []
opengl = ["glow", "glutin", "glutin-winit", "raw-window-handle", "bytemuck"]
