[package]
name = "emu_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hemu"
path = "src/main.rs"

[dependencies]
emu_core = { path = "../../core" }
emu_nes = { path = "../../systems/nes", features = ["opengl"] }
emu_gb = { path = "../../systems/gb" }
emu_atari2600 = { path = "../../systems/atari2600" }
emu_pc = { path = "../../systems/pc" }
emu_snes = { path = "../../systems/snes" }
emu_sms = { path = "../../systems/sms" }
emu_n64 = { path = "../../systems/n64", features = ["opengl"] }
rodio = "0.17"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
rfd = "0.14"
png = "0.17"
rand = "0.8"
chrono = "0.4"

# Window and rendering support
sdl2 = { version = "0.36", features = ["bundled"] }
glow = "0.13"
bytemuck = "1.14"

# egui support
egui = "0.32"
egui_glow = "0.32"
egui_extras = { version = "0.32", features = ["image"] }
egui_sdl2_gl = "0.32"

[features]
default = ["opengl"]
opengl = []
