[package]
name = "emu_nes"
version = "0.1.0"
edition = "2021"

[dependencies]
emu_core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# OpenGL dependencies (optional)
glow = { version = "0.13", optional = true }

[features]
default = []
opengl = ["dep:glow"]
